# Dist-NN

./: .gitignore  README.md  _types.py  generate_plots.ipynb  generate_plots.py  heat.ipynb  ibes_tickers.txt  mmd_nn.ipynb  mnist_nn.ipynb  mta_data.ipynb  nearest_neighbors.ipynb  normal_means_l2.eps  normal_stds_l2.eps  normal_unif_wasserstein.eps  normal_uniform_cdf_interp.eps  normal_uniform_hist.eps  normal_uniform_kde.eps  normals_means.eps  normals_stds.eps  pyproject.toml  sp500.txt  wasserstein_regression.ipynb  wrds.ipynb
future work/: assignment.py  cop_kmeans.py  heat.ipynb  mmd_nn.ipynb  mnist_nn.ipynb
nn_dist_completion/: README.md  __init__.py  bootstrap.py  config.py  example.py  nearest_neighbors.py  plotting.py  simulation.py  utils.py
notebooks/: wrds.ipynb
wrds/: README.md  __init__.py  dist_nn.py  download_data.py  evaluation.py  example_experiments.py  experiments.py  plots.py  us_tickers.txt
